--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
 body {
   font-family: 'Roboto', sans-serif;
   color: #434455;
-  background-color: var(--second-color)
+  background-color: var(--second-color);
+}
 a {
   text-decoration: none;
 }
