--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
 
 /* .header-navigation {
 }  */
-.link.logo {
+.logo {
   font-family: 'Raleway', sans-serif;
   font-weight: 800;
   font-size: 18px;
@@ -29,7 +29,7 @@ body {
 .header-link.link:is(:hover, :focus) {
   color: #404bbf;
 }
-color: #404bbf .link.logo span {
+.logo span {
   color: var(--primari-color);
 }
 
