--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
   --second-color: #ffffff;
   --another-color: #4d5ae5;
   --text-color: #434455;
+  --text-color-f: #f4f4fd;
 }
 body {
   font-family: 'Roboto', sans-serif;
@@ -27,6 +28,9 @@ body {
 .link {
   text-decoration: none;
 }
+.header-link.link {
+  color: var(--primari-color);
+}
 .header-link.link:is(:hover, :focus) {
   color: #404bbf;
 }
@@ -42,6 +46,9 @@ span {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--primari-color);
+}
+.item-studio {
+  color: #422e33;
 }
 
 /* .header-contacts {
@@ -78,16 +85,16 @@ address {
 }
 .hero-btn {
   /* background-color: var(--another-color); */
-  color: var(--second-color);
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
+  cursor: pointer;
+  color: var(--second-color);
 }
 .hero-btn:is(:hover, :focus) {
   background-color: #404bbf;
-  cursor: pointer;
 }
 
 /* .studio {
@@ -111,8 +118,6 @@ address {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--text-color);
-
-  434455 
 }
 /* .prtfolio {
 } */
@@ -130,8 +135,8 @@ address {
 .prtfolio-menu-item {
 }*/
 .ourteam {
-  background-color: #F4F4FD;
-} 
+  background-color: var(--text-color-f);
+}
 .ourteam-title {
   font-weight: 700;
   font-size: 36px;
@@ -163,28 +168,33 @@ address {
   color: #434455;
 }
 
-
 .footer {
   background-color: var(--primari-color);
 }
-.footer-link {
+.footer-logo {
   font-family: 'Raleway', sans-serif;
   font-weight: 800;
   font-size: 18px;
-  line-height: 1.17;
   text-transform: uppercase;
-  letter-spacing: 0.02em;
-  color: var(--second-color);
-}
-.footer-link span {
+  letter-spacing: 0.03em;
+  line-height: 1.17;
   color: var(--another-color);
+}
+.footer-logo span {
+  color: var(--another-color);
+}
+.footer-logo.link {
+  text-decoration: none;
+}
+.footer .footer-span {
+  color: #f4f4fd;
 }
 .footer-text {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #f4f4fd;
+  color: var(--text-color-f);
 }
 /*--------------------- portfolio -----------------*/
 .listbtn {
