--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,7 @@ address {
 }
 /*--------------------- portfolio -----------------*/
 .listbtn {
-  font-family: 'Roboto';
+  font-family: 'Roboto', sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
